--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trystal/data-gen",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Data generator, primarily for use in testing Trystal applications",
   "homepage": "https://github.com/trystalnet/trist#readme",
   "author": "Terence O'Neill <terry.oneill@trystal.net>",
@@ -37,6 +37,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@trystal/interfaces": "^1.0.0",
     "@types/lodash": "^4.0.21-alpha",
     "lodash": "^4.13.1"
   }
